name: Animas
version: 0.1
cabal-Version: >= 1.8
license: BSD3
license-file: LICENSE
author: Edward Amsden, Henrik Nilsson, Antony Courtney
maintainer: Edward Amsden (edwardamsden@gmail.com)
homepage: http://www.edwardamsden.com/animas/
category: Reactivity, FRP
synopsis: Updated version of Yampa: a library for programming hybrid systems.
description: A library for declarative programming of reactive systems
build-type: Simple
Tested-With: GHC
Extra-Source-Files:
  README.txt

  tests/AFRPTests.hs,         tests/AFRPTestsCommon.hs,        tests/AFRPTestsArr.hs,
  tests/AFRPTestsComp.hs,     tests/AFRPTestsFirstSecond.hs,   tests/AFRPTestsLaws.hs,
  tests/AFRPTestsLoop.hs,     tests/AFRPTestsLoopLaws.hs,      tests/AFRPTestsBasicSF.hs,
  tests/AFRPTestsSscan.hs,    tests/AFRPTestsEvSrc.hs,         tests/AFRPTestsCOC.hs,
  tests/AFRPTestsSwitch.hs,   tests/AFRPTestsKSwitch.hs,       tests/AFRPTestsRSwitch.hs,
  tests/AFRPTestsPSwitch.hs,  tests/AFRPTestsRPSwitch.hs,      tests/AFRPTestsWFG.hs,
  tests/AFRPTestsAccum.hs,    tests/AFRPTestsPre.hs,           tests/AFRPTestsDelay.hs,
  tests/AFRPTestsDer.hs,      tests/AFRPTestsLoopPre.hs,       tests/AFRPTestsLoopIntegral.hs,
  tests/AFRPTestsReact.hs,    tests/AFRPTestsEmbed.hs,         tests/AFRPTestsUtils.hs,
  tests/AFRPTestsTask.hs,     tests/testAFRPMain.hs,
  tests/Setup.lhs,            tests/testAFRP.cabal,

  examples/Setup.lhs,         examples/examples.cabal,
  examples/Elevator/Elevator.hs,
  examples/Elevator/TestElevatorMain.hs,
  examples/TailgatingDetector/TailgatingDetector.hs,
  examples/TailgatingDetector/TestTGMain.hs

library
  hs-source-dirs:  src
  ghc-options : -O2 -Wall -fno-warn-name-shadowing
  build-Depends: base, random
  exposed-modules:
    FRP.Animas
    FRP.Animas.AffineSpace
    FRP.Animas.Event
    FRP.Animas.Geometry
    FRP.Animas.MergeableRecord
    FRP.Animas.Point2
    FRP.Animas.Utilities
    FRP.Animas.Vector3
    FRP.Animas.Forceable
    FRP.Animas.Point3
    FRP.Animas.Vector2
    FRP.Animas.VectorSpace
    FRP.Animas.Miscellany
    FRP.Animas.Task
    FRP.Animas.Internals
  other-modules:
    FRP.Animas.Diagnostics
