Name:               testAFRP
Version:            0.0
Description:        Tests for Yampa functions.
License:            BSD3
License-File:       ../LICENSE
Copyright:          Henrik Nilsson, Antony Courtney and Yale University, (c) 2003
Author:             Antony Courtney, Paul Hudak, Henrik Nilsson, John Peterson
Maintainer:         Antony Courtney	<antony@apocalypse.org>, Paul Hudak	<paul.hudak@yale.edu>, Henrik Nilsson	<nilsson@cs.yale.edu>, John Peterson	<peterson-john@cs.yale.edu>
Stability:          provisional
Homepage:           http://www.haskell.org/yampa/
Category:           Reactivity, FRP
Synopsis:           Tests for Yampa functions.
Build-Depends:       base, Yampa >= 0.9.2

Executable:          testAFRP
Main-is:             testAFRPMain.hs
ghc-options:         -O2 -fglasgow-exts 
Other-modules:      AFRPTests,
                    AFRPTestsCommon,
                    AFRPTestsArr,
                    AFRPTestsComp,
                    AFRPTestsFirstSecond,
                    AFRPTestsLaws,
                    AFRPTestsLoop,
                    AFRPTestsLoopLaws,
                    AFRPTestsBasicSF,
                    AFRPTestsSscan,
                    AFRPTestsEvSrc,
                    AFRPTestsCOC,
                    AFRPTestsSwitch,
                    AFRPTestsKSwitch,
                    AFRPTestsRSwitch,
                    AFRPTestsPSwitch,
                    AFRPTestsRPSwitch,
                    AFRPTestsWFG,
                    AFRPTestsAccum,
                    AFRPTestsPre,
                    AFRPTestsDelay,
                    AFRPTestsDer,
                    AFRPTestsLoopPre,
                    AFRPTestsLoopIntegral,
                    AFRPTestsReact,
                    AFRPTestsEmbed,
                    AFRPTestsUtils,
                    AFRPTestsTask
